@@ -13,6 +13,7 @@ Package / System integration:
    * Add README.packaging file for packagers.
    * Removed obsolete print-usb-usermap. Use
      "print-camera-list usb-usermap usbcam" instead.
+   * New syntax for print-camera-list's udev output. See help output.
    * Add new permission setup script doing class based matching for
      PTP class cameras not listed explicitly by USB IDs.
      This script (check-ptp-camera) is used by the generated UDEV rules.
